Fix tooltip z-index

--- a/_sass/general/tooltip.scss
+++ b/_sass/general/tooltip.scss
@@ -5,6 +5,7 @@
 	font-weight: 600;
 	border-radius: 3px;
 	box-shadow: 0 2px 10px rgba(0, 0, 0, .2);
+	z-index: 3002;
 	&%tooltipBlack,
 	&%tooltipRed {
 		background-color: $main-color;
